--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 
 script:
 - bundle exec jekyll build
-- bundle exec htmlproofer ./_site
+- bundle exec htmlproofer ./_site --http-status-ignore "999"
 
 branches:
   only:
