--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ rvm:
 jobs:
   include:
     - stage: build
-      script: bundle exec jekyll build
+      script:
+      - bundle 
+      - bundle exec jekyll build
     - stage: test
       script: bundle exec htmlproofer ./_site --http-status-ignore "999"
     - stage: deploy
